# dod_gui

./: .gitignore  CMakeLists.txt  gui.xcf  minimal.ui  test.ui
src/: gui.h  main.cpp  sdl.h  ui.h
